--- a/src/main/webapp/css/myweb.css
+++ b/src/main/webapp/css/myweb.css
@@ -8,19 +8,104 @@ and open the template in the editor.
     Author     : haonguyen
 */
 
-body{
-    
-    background: #bdeffe;
+.mainBody{
+    /*background: #bdeffe;*/
     color: #000305;
+    margin: 0 auto;
+    width: 80%;
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    clear: both;
     font-size: 87.5%;/* base font size 14px*/
     font-family: Arial,'Lucida Sans Unicode';
     line-height: 1.5;
     text-align: left;
+    font-size: 15px;
+    margin-top:15px;
 }
- #map {
-        width: 100%;
-        height: 700px;
-      }
+
+.links-top{
+    width:100%;
+    background-color:#415B7C;
+    height:25px;
+}
+
+.links-bottom{
+    background-color:#415B7C;
+    height:30px;
+}
+.background-title{
+    background: url(../image/titleBackground.jpg);
+    width:100%;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+.row{
+    margin-left:0px !important;
+}
+
+.content-search{
+    margin-bottom:20px;
+}
+.title{
+    color:white;
+    font-size:25px;
+    margin-top:40px;
+    margin-left:-25px;
+}
+
+.search-title{
+    font-size:20px;
+    text-align: center;
+    color:white;
+}
+
+.link-box{
+    border-left: 1px solid #ffffff;
+    text-align: center
+}
+
+.link-text{
+    display: inline-block;
+    color:white;
+    display: inline;
+    font-size:15px;
+}
+
+.link-text:visited{
+    color:white;
+    font-size:15px;
+}
+
+.link-text:hover{
+    color:white;
+    text-decoration:underline;
+}
+
+.left-content{
+    background-color: #EFEFEF;
+    height:678px;
+}
+
+#map 
+{
+    width: 100%;
+    height: 678px;
+}
+
+.search-form{
+    padding:15px;
+}
+
+input[type=checkbox]{
+    margin-top: 8px !important; 
+}
+
+.group-date{
+    margin-left: 10px;
+}
 a{
     text-decoration: none;
     
@@ -30,11 +115,6 @@ a:link,a:visited{
 }
 a:hover,a:active{
     
-}
-.body{
-    margin: 0 auto;
-    width: 80%;
-    clear: both;
 }
 .mainheader img{
     width: 20%;
@@ -78,14 +158,12 @@ a:hover,a:active{
     line-height: 30px;
     border-radius: 5px;
     -moz-border-radius:  5px;
-    -webkit-border-radius: 5px;
-    
-    
-    
+    -webkit-border-radius: 5px;    
 }
 .content{
     width: 35%;
     float: left;
+    background: #e8eee7;
 }
 .topcontent{
     background-color:  #05e6e8;
@@ -93,15 +171,14 @@ a:hover,a:active{
     height: 678px;
     
 }
-.post-infor{
-    background-color: #213bee;
-    height: 30px;
-    color: #fff;
-    padding: 5px;
+.post-info{
+    background-color: #cad8c6;
+    height: 60px;
+    font-weight: bold;
+    font-size:30px;
+    padding: 10px;
     text-shadow: none;
-    border-radius: 5px;
-    -moz-border-radius:  5px;
-    -webkit-border-radius: 5px;
+    margin-bottom:30px;
 }
 .top-sidebar{
     width: 65%;
@@ -112,10 +189,11 @@ a:hover,a:active{
 .mainfooter{
     width: 100%;
     float: left;
-    border-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     -moz-border-radius:  5px;
     -webkit-border-radius: 5px;
-    background-color:   #213bee;
+    background-color: #415B7C;
   
 }
 .mainfooter p{
